# CAHAL

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE.md  README.md
src/android/: android_cahal.c  android_cahal_audio_format_description.c  android_cahal_device.c
src/common/: cahal.c  cahal_audio_format_description.c  cahal_audio_format_flags.c  cahal_device.c  cahal_device_stream.c
src/darwin/: darwin_cahal_audio_format_description.c  darwin_cahal_audio_format_flags.c  darwin_cahal_device.c  osx_cahal.c  osx_cahal_audio_format_description.c  osx_cahal_audio_format_flags.c  osx_cahal_device.c  osx_cahal_device_stream.c  osx_log.c
src/darwin/ios/: ios_cahal.c  ios_cahal_device.c  ios_cahal_device_stream.c  ios_cahal_initialize.m
src/darwin/osx/: osx_cahal.c  osx_cahal_audio_format_description.c  osx_cahal_device.c  osx_cahal_device_stream.c
src/include/: cahal.h  cahal_audio_format_description.h  cahal_audio_format_flags.h  cahal_device.h  cahal_device_stream.h  types.h
src/include/android/: android_cahal.h  android_cahal_audio_format_description.h  android_cahal_device.h
src/include/darwin/: darwin_cahal_audio_format_description.h  darwin_cahal_audio_format_flags.h  darwin_cahal_device.h  osx_cahal.h  osx_cahal_audio_format_description.h  osx_cahal_audio_format_flags.h  osx_cahal_device.h  osx_cahal_device_stream.h  osx_log.h
src/include/darwin/ios/: ios_cahal.h  ios_cahal_device.h  ios_cahal_device_stream.h  ios_cahal_initialize.h
src/include/darwin/osx/: osx_cahal.h  osx_cahal_audio_format_description.h  osx_cahal_device.h  osx_cahal_device_stream.h
src/include/ios/: ios_cahal.h  ios_cahal_device.h
src/include/osx/: osx_cahal.h  osx_cahal_audio_format_description.h  osx_cahal_audio_format_flags.h  osx_cahal_device.h  osx_cahal_device_stream.h
src/include/windows/: windows_cahal.h  windows_cahal_device.hpp  windows_cahal_device_stream.hpp
src/ios/: ios_cahal.c  ios_cahal_device.c
src/osx/: osx_cahal.c  osx_cahal_audio_format_description.c  osx_cahal_audio_format_flags.c  osx_cahal_device.c  osx_cahal_device_stream.c
src/windows/: windows_cahal.c  windows_cahal_device.cpp  windows_cahal_device_stream.cpp
test/: CMakeLists.txt  cahal_tests.i  test.py  test_cahal.py  test_cahal_audio_format_description.py  test_cahal_device.py  test_cahal_device_stream.py  test_driver.py  test_wav.py
test/src/: cahal_wrapper.c
test/src/include/: cahal_wrapper.h
